--- a/index.html
+++ b/index.html
@@ -6041,8 +6041,8 @@ try{
       });
 
       const data = await res.json();
-  alert(data);
-  return data;
+
+  return data.text;
 
   } catch (err) {
     console.error("Error generating document:", err);
@@ -6384,8 +6384,6 @@ async function generatePdfFromString(htmlString) {
 			htmlString = await generateTrustDocument({trustName, trustSigningDate, state,  grantors, trustees, beneficiaries, assets, other_assets, schedule_a_assets, signers, distribution_mode });
 	
 			generatePdfFromString(htmlString);
-
-
 
 
       const res = await fetch(`${API_URL}`, {
