--- a/index.html
+++ b/index.html
@@ -2215,7 +2215,7 @@ Staggered
 										<div class="card-body">
 											<!--<img src="http://127.0.0.1:8000/static/page1.png" id="the_preview" style="width:100%; height:auto;"
 											/>-->
-											<canvas id="pdf-render"></canvas>
+											<canvas id="pdf-render" style="width:100%; height:auto;"></canvas>
 
 
 											<div id="spinnershow" style="display:none;position:absolute;z-index:0;top:10%;left:50%;">
