--- a/index.html
+++ b/index.html
@@ -1920,56 +1920,7 @@ Staggered
 					<!--begin::Messages-->
 					<div class="scroll-y me-n5 pe-5" data-kt-element="messages" data-kt-scroll="true" data-kt-scroll-activate="true" data-kt-scroll-height="auto" data-kt-scroll-dependencies="#kt_drawer_chat_messenger_header, #kt_drawer_chat_messenger_footer" data-kt-scroll-wrappers="#kt_drawer_chat_messenger_body" data-kt-scroll-offset="0px" style="height: 164px;" id="list">	
 						<!--begin::Message(in)-->
-						<div class="d-flex justify-content-start mb-10">
-							<!--begin::Wrapper-->
-							<div class="d-flex flex-column align-items-start">
-								<!--begin::User-->
-								<div class="d-flex align-items-center mb-2">
-									<!--begin::Avatar-->
-									<div class="symbol symbol-35px symbol-circle">
-										<img alt="Pic" src="assets/media/avatars/300-25.jpg">
-									</div>
-									<!--end::Avatar-->
-									<!--begin::Details-->
-									<div class="ms-3">
-										<a href="#" class="fs-5 fw-bold text-gray-900 text-hover-primary me-1">Assistant</a>
-										<span class="text-muted fs-7 mb-1">2 mins</span>
-									</div>
-									<!--end::Details-->
-								</div>
-								<!--end::User-->
-								<!--begin::Text-->
-								<div class="p-5 rounded bg-light-info text-gray-900 fw-semibold mw-lg-400px text-start" data-kt-element="message-text">How likely are you to recommend our company to your friends and family ?</div>
-								<!--end::Text-->
-							</div>
-							<!--end::Wrapper-->
-						</div>
-						<!--end::Message(in)-->
-						<!--begin::Message(out)-->
-						<div class="d-flex justify-content-end mb-10">
-							<!--begin::Wrapper-->
-							<div class="d-flex flex-column align-items-end">
-								<!--begin::User-->
-								<div class="d-flex align-items-center mb-2">
-									<!--begin::Details-->
-									<div class="me-3">
-										<span class="text-muted fs-7 mb-1">5 mins</span>
-										<a href="#" class="fs-5 fw-bold text-gray-900 text-hover-primary ms-1">You</a>
-									</div>
-									<!--end::Details-->
-									<!--begin::Avatar-->
-									<div class="symbol symbol-35px symbol-circle">
-										<img alt="Pic" src="assets/media/avatars/300-1.jpg">
-									</div>
-									<!--end::Avatar-->
-								</div>
-								<!--end::User-->
-								<!--begin::Text-->
-								<div class="p-5 rounded bg-light-primary text-gray-900 fw-semibold mw-lg-400px text-end" data-kt-element="message-text">Hey there, we’re just writing to let you know that you’ve been subscribed to a repository on GitHub.</div>
-								<!--end::Text-->
-							</div>
-							<!--end::Wrapper-->
-						</div>
+						
 						<!--end::Message(out)-->
 						<!--begin::Message(in)-->
 					
@@ -1983,7 +1934,7 @@ Staggered
 				<!--begin::Card footer-->
 				<div class="card-footer pt-4" style="background-color:#d1cfc6;" id="kt_drawer_chat_messenger_footer">
 					<!--begin::Input-->
-					<textarea class="form-control form-control-flush mb-3" rows="1" data-kt-element="input" placeholder="Type a message"></textarea>
+					<textarea class="form-control form-control-flush mb-3" rows="1" data-kt-element="input" id="user_message" placeholder="Type a message"></textarea>
 					<!--end::Input-->
 					<!--begin:Toolbar-->
 					<div class="d-flex flex-stack">
@@ -5828,6 +5779,68 @@ Staggered
 			</div>
 			<!--end::Modal dialog-->
 		</div>
+
+
+	<div id="from_ai" style="display:none;">
+
+	<div class="d-flex justify-content-start mb-10">
+							<!--begin::Wrapper-->
+							<div class="d-flex flex-column align-items-start">
+								<!--begin::User-->
+								<div class="d-flex align-items-center mb-2">
+									<!--begin::Avatar-->
+									<div class="symbol symbol-35px symbol-circle">
+										<img alt="Pic" src="assets/media/avatars/300-25.jpg">
+									</div>
+									<!--end::Avatar-->
+									<!--begin::Details-->
+									<div class="ms-3">
+										<a href="#" class="fs-5 fw-bold text-gray-900 text-hover-primary me-1">Assistant</a>
+										<span class="text-muted fs-7 mb-1">2 mins</span>
+									</div>
+									<!--end::Details-->
+								</div>
+								<!--end::User-->
+								<!--begin::Text-->
+								<div class="p-5 rounded bg-light-info text-gray-900 fw-semibold mw-lg-400px text-start" data-kt-element="message-text">{ai_message}</div>
+								<!--end::Text-->
+							</div>
+							<!--end::Wrapper-->
+						</div>
+</div>
+
+
+
+<div id="from_user" style="display:none;">
+
+<div class="d-flex justify-content-end mb-10">
+<!--begin::Wrapper-->
+<div class="d-flex flex-column align-items-end">
+<!--begin::User-->
+<div class="d-flex align-items-center mb-2">
+<!--begin::Details-->
+<div class="me-3">
+	<span class="text-muted fs-7 mb-1">5 mins</span>
+	<a href="#" class="fs-5 fw-bold text-gray-900 text-hover-primary ms-1">You</a>
+</div>
+<!--end::Details-->
+<!--begin::Avatar-->
+<div class="symbol symbol-35px symbol-circle">
+	<img alt="Pic" src="assets/media/avatars/300-1.jpg">
+</div>
+<!--end::Avatar-->
+</div>
+<!--end::User-->
+<!--begin::Text-->
+<div class="p-5 rounded bg-light-primary text-gray-900 fw-semibold mw-lg-400px text-end" data-kt-element="message-text">Hey there, we’re just writing to let you know that you’ve been subscribed to a repository on GitHub.</div>
+<!--end::Text-->
+</div>
+<!--end::Wrapper-->
+</div>
+</div>
+
+
+
 		<!--end::Modal - Invite Friend-->
 		<!--end::Modals-->
 		<!--begin::Javascript-->
@@ -6341,16 +6354,20 @@ $('#kt_drawer_chat').animate({
 		  $("#send_message").click(async function(){
 let divs = $('#kt_create_account_form').find('div');
 let the_data = divs.eq(1).html();
+let to_pass = {"html":the_data,"question":$("#user_message").val()}
 try{
 	    const res = await fetch("/api/assistant", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ the_data }),
+        body: JSON.stringify({ to_pass }),
       });
 
       const data = await res.json();
+	  let values = data.text.split('\n');
+	  let ans = values[values.length-1].replace("Answer:","");
+	  let htm = $("#from_ai").html().replace("{ai_answer}",ans);
+	  $("#list").append(htm);
 
-  return data.text;
 
   } catch (err) {
     console.error("Error generating document:", err);
