--- a/index.html
+++ b/index.html
@@ -6350,16 +6350,16 @@ async function generatePdfFromString(htmlString) {
 
 
 		  $("#send_message").click(async function(){
-let divs = $('#kt_create_account_form').find('div');
-console.log(the_step-1);
-let the_data = divs.eq(the_step-1).html();
-let user_msg = $("#user_message").val();
-let to_pass = {"html":the_data,"question":user_msg}
+			let divs = $('#kt_create_account_form').find('div');
+			console.log(divs.length);
+			let the_data = divs.eq(the_step-1).html();
+			let user_msg = $("#user_message").val();
+			let to_pass = {"html":the_data,"question":user_msg}
 
-let user_htm = $("#from_user").html().replace("{the_user_message}",user_msg);
+			let user_htm = $("#from_user").html().replace("{the_user_message}",user_msg);
 
-$("#list").append(user_htm);
-$("#user_message").val("");
+			$("#list").append(user_htm);
+			$("#user_message").val("");
 
 
 try{
