--- a/index.html
+++ b/index.html
@@ -6351,7 +6351,7 @@ async function generatePdfFromString(htmlString) {
 
 		  $("#send_message").click(async function(){
 			let divs = $('#kt_create_account_form').find('div[data-kt-stepper-element="content"]');
-	
+			alert(the_step);
 			let the_data = divs.eq(the_step).html();
 			let user_msg = $("#user_message").val();
 			let to_pass = {"html":the_data,"question":user_msg}
