--- a/index.html
+++ b/index.html
@@ -5934,7 +5934,8 @@ async function generatePdfFromString(htmlString) {
       y: 40,
       width: pdf.internal.pageSize.getWidth() - 80,
       windowWidth: 800,
-      autoPaging: true
+      autoPaging: true,
+	  margin: [40, 40, 60, 40] // [top, right, bottom, left]
     });
 
     // Add a blank page after each render, except the last one
@@ -5942,23 +5943,23 @@ async function generatePdfFromString(htmlString) {
     //  pdf.addPage();
    // }
 //  }
- 
-	   const pdfArrayBuffer = pdf.output("arraybuffer");
 
-    // Load with PDF.js
-    const loadingTask = pdfjsLib.getDocument({ data: pdfArrayBuffer });
-    pdfDoc = await loadingTask.promise;
-  	//  document.getElementById("page_count").textContent = pdfDoc.numPages;
+	const pdfArrayBuffer = pdf.output("arraybuffer");
 
-  	$("#previous_button").click(function(){
-		prevPage();
+	// Load with PDF.js
+	const loadingTask = pdfjsLib.getDocument({ data: pdfArrayBuffer });
+	pdfDoc = await loadingTask.promise;
+	//  document.getElementById("page_count").textContent = pdfDoc.numPages;
+
+	$("#previous_button").click(function(){
+	prevPage();
 	});
 
 	$("#next_button").click(function(){
-		nextPage();
+	nextPage();
 	});
-	
-    renderPage(1);
+
+	renderPage(1);
 
 	$("#spinnershow").css("display","none");
 	pdf.save(`document-${Date.now()}.pdf`);
