--- a/index.html
+++ b/index.html
@@ -5924,18 +5924,18 @@ async function generatePdfFromString(htmlString) {
 
   // Parse HTML string into elements
   const container = document.createElement("div");
-  container.innerHTML = htmlString;
+  container.innerHTML = htmlString.replace("``` htm","");
   const pages = container.querySelectorAll(".page");
 
 //  for (let i = 0; i < pages.length; i++) {
     // Render current page
-    await pdf.html(htmlString, {
-      x: 40,
-      y: 40,
+    await pdf.html(htmlString.replace("``` htm",""), {
+      x: 0,
+      y: 0,
       width: pdf.internal.pageSize.getWidth() - 80,
       windowWidth: 800,
       autoPaging: true,
-	  margin: [40, 40, 60, 40] // [top, right, bottom, left]
+	  margin: [40, 20, 60, 20] // [top, right, bottom, left]
     });
 
     // Add a blank page after each render, except the last one
