--- a/loan.html
+++ b/loan.html
@@ -6043,7 +6043,7 @@ async function generatePdfFromString(htmlString) {
 	}
 	
 		var cnt = 0;
-		$("#kt_calendar_datepicker_start_date").flatpickr({
+		$("#first_payment_date").flatpickr({
 		enableTime: true,
 		dateFormat: "Y-m-d",
 		})
