--- a/smb_loan.html
+++ b/smb_loan.html
@@ -6259,7 +6259,6 @@ async function generatePdfFromString(htmlString) {
 			
 			
 		
-		
 			$("#add_authorized_signer").click(function(){
 
 					var htm = '<div class="separator separator-dashed mx-5 my-5"></div>';
@@ -6290,6 +6289,7 @@ async function generatePdfFromString(htmlString) {
 				$("#grantors").append(htm);
 
 			});
+
 
 
 	
@@ -6341,6 +6341,20 @@ async function generatePdfFromString(htmlString) {
 
 		
 				let authorized_signers = [];
+
+				for(var i=0; i<grantor_count; i++){
+					var dic = {};
+					for(const itm of items){
+						var lbl = itm.text.toLowerCase().replace(/\s+/g, "_");
+						lbl = lbl.replace(/[^a-zA-Z0-9 ]/g, "");// Removes all single quotes
+						dic[lbl] = $("#authorized_signer_"+lbl+"_"+i).val();
+
+					}
+
+					authorized_signers.push(dic);
+
+				}
+
 			
 				var purpose_options = $('input[type="checkbox"][name="defaults_and_remedies"]:checked')
 				.map(function() {
