--- a/corp_loan.html
+++ b/corp_loan.html
@@ -6492,7 +6492,7 @@ async function generatePdfFromString(htmlString) {
 					return $(this).val();
 				}).get();
 
-				const covenants = {financial_covenants: financial_covenants};
+				const covenants = {financial_covenants: financial_covenants, affirmative_covenants: affirmative_covenants, negative_covenants: negative_covenants};
 
 
 
